error.txt
error1.c: In function ‘main’:
error1.c:5:5: error: expected declaration or statement at end of input
    5 |     printf("dfg");
      |     ^~~~~~
